2013-07-04 Alex Tutubalin <lexa@lexa.ru>
  * New camera/format support:
     OmniVision OV5647 (Raspberry Pi)
     Nikon D5200
     Panasonic DMC-GF6
  * Fixed decoding error for some Canon sRAW files.
  * LibRaw 0.15.3

2013-05-26 Alex Tutubalin <lexa@lexa.ru>
  * Fixed possible double-free() on error recovery on damaged full-color
    (Foveon, sRAW) files.
  * wchar_t* file interface disabled for MinGW32 compilation
  * LibRaw 0.15.2

2013-05-25 Alex Tutubalin <lexa@lexa.ru>
  * fixed wrong data maximum calculation for Panasonic files
  * check for possible buffer overrun in exposure correction code
  * LibRaw 0.15.1
      
2013-05-23 Alex Tutubalin <lexa@lexa.ru>

 LibRaw 0.15-Release
 
 New camera/format support:
  * Adobe DNG:	fast Load DNG (LightRoom 4.x), support for 
		lossy-compressed DNG (LR 4.x, requires libjpeg 6+)
  * Canon:	G1 X, SX220 HS, EOS 5D Mark III, EOS 650D, EOS 1D-X, 
		100D (Rebel SL1), 700D (Rebel T5i), 6D, EOS M, G15, S110, SX50
  * Casio:	EX-ZR100,EX-Z8
  * Fujifilm:	X-S1, HS30EXR, X1-Pro,X-E1, X20, X100S, SL1000, HS50EXR,
  		F800EXR, XF1
  * Leica:	D-LUX6 and V-LUX4
  * Nikon:	D4, D3200, D800, D800E, 1 J2, 1 V2, D600, 1 J3, 1 S1, Coolpix A,
		Coolpix P330, Coolpix P7700, D7100
  * Olympus:	E-M5, XZ-2, XZ-10, E-PL5, E-PM2
  * Panasonic:	G5, G6, DMC-GF5, FZ200, GH3, LX7
  * Pentax:	MX-1, K-5 II, K-5 IIs, K-30, Q10
  * Samsung:	EX2F, NX20, NX210, support for the new firmware for NX100
  * Sigma:	SD15, SD1, SD1 Merill, DP1, DP1S, DP1X, DP2, DP2S, DP2X 
		(only with Demosaic-pack-GPL2)
  * Sony:	SLT-A58, RX-1, SLT-A99, NEX-5R, NEX-6, NEX-F3, SLT-A37, SLT-A57
  * Multishot files:	Imacon Ixpress 39Mpix

API changes:
  1. dcraw_process() can now be called several times with different parameters 
     without re-opening and unpacking the file for second and consecutive 
     calls to dcraw_process

  2. deleted (nobody uses those)
   - LibRaw::dcraw_document_mode_processing  (and respective C-API)
   - imgdata.color.color_flags data field
